--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Fashion News</title>
 </head>
 <body>
-    
+   <header>
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="html/sobre.html">Sobre Nós</a>
+    </nav>
+   </header>
+   <main>
+    <h1>Fashion News</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt repellat incidunt exercitationem quaerat animi possimus placeat illo optio sit quam voluptas dicta quod sunt, porro error, et, architecto facere ex!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, explicabo consequuntur laudantium consectetur temporibus tempora dolorem soluta enim doloremque fuga! Veritatis quidem animi incidunt veniam id accusantium ab sunt laboriosam.
+    </p>
+    <h2>Noticias Da Semana</h2>
+    <img src="th.jfif" alt="Imagem de uma modelo">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt repellat incidunt exercitationem quaerat animi possimus placeat illo optio sit quam voluptas dicta quod sunt, porro error, et, architecto facere ex!
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, explicabo consequuntur laudantium consectetur temporibus tempora dolorem soluta enim doloremque fuga! Veritatis quidem animi incidunt veniam id accusantium ab sunt laboriosam.
+   </main>
+   <footer>
+    copyright@2023 by rc.inc
+   </footer>
 </body>
 </html>
